Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -60,3 +60,45 @@
 - `Subtotal` : 기준 컬럼별 그룹 합계 → 그룹마다 표시
 
 <img width="465" height="361" alt="image" src="https://github.com/user-attachments/assets/5be7e416-eda5-42ea-a17d-f8bf3a0f0a0d" />
+</br>
+</br>
+</br>
+</br>
+
+### < ABAP 객체 생성 기본 문법 >
+**1) 참조 변수 선언**
+- 객체를 담는 변수가 아니라 객체를 가리키는 참조 변수
+- 실제 객체는 아직 없음
+```abap
+DATA: <ref_var> TYPE REF TO <class_name>.
+```
+```abap
+DATA: go_alv TYPE REF TO cl_gui_alv_grid.
+```
+</br>
+
+**2) 객체 생성**
+- `CREATE OBJECT` 로 실제 객체 생성
+- 생성 시 생성자(CONSTRUCTOR) 호출
+- 필요한 값은 `EXPORTING` 으로 전달
+```abap
+CREATE OBJECT <ref_var>
+  EXPORTING
+    <param_1> = <value_1>
+    <param_2> = <value_2>
+  EXCEPTIONS
+    <exception_1> = <rc_1>
+    <exception_2> = <rc_2>.
+```
+```abap
+DATA: go_container TYPE REF TO cl_gui_custom_container,
+      go_alv       TYPE REF TO cl_gui_alv_grid.
+
+CREATE OBJECT go_container
+  EXPORTING
+    container_name = 'CONTROL_AREA'.
+
+CREATE OBJECT go_alv
+  EXPORTING
+    i_parent = go_container.
+```
