Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -96,7 +96,7 @@ DATA: go_container TYPE REF TO cl_gui_custom_container,
 
 CREATE OBJECT go_container
   EXPORTING
-    container_name = 'CONTROL_AREA'.
+    container_name = 'MY_CONTROL_AREA'.      " AREA의 이름
 
 CREATE OBJECT go_alv
   EXPORTING
