Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -78,27 +78,31 @@ DATA: go_alv TYPE REF TO cl_gui_alv_grid.
 </br>
 
 **2) 객체 생성**
-- `CREATE OBJECT` 로 실제 객체 생성
+- `CREATE OBJECT` 로 실제 객체 생성 (생성자 자동 호출)
 - 생성 시 생성자(CONSTRUCTOR) 호출
 - 필요한 값은 `EXPORTING` 으로 전달
+- PBO에서 INITIAL 체크 후 1회 생성, Container → ALV 순서
 ```abap
-CREATE OBJECT <ref_var>
-  EXPORTING
-    <param_1> = <value_1>
-    <param_2> = <value_2>
-  EXCEPTIONS
-    <exception_1> = <rc_1>
-    <exception_2> = <rc_2>.
+IF <ref_var> IS INITIAL.
+  CREATE OBJECT <ref_var>
+    EXPORTING
+      <param> = <value>.
+    EXCEPTIONS
+      <exception_1> = <rc_1>
+ENDIF.
 ```
+- `container_name` → Screen의 Area와 연결
+- `i_parent` → ALV ↔ Container 연결
 ```abap
-DATA: go_container TYPE REF TO cl_gui_custom_container,
-      go_alv       TYPE REF TO cl_gui_alv_grid.
+MODULE init_alv OUTPUT.
+  IF go_container IS INITIAL.
+    CREATE OBJECT go_container
+      EXPORTING
+        container_name = 'MY_CONTROL_AREA'.
 
-CREATE OBJECT go_container
-  EXPORTING
-    container_name = 'MY_CONTROL_AREA'.      " AREA의 이름
-
-CREATE OBJECT go_alv
-  EXPORTING
-    i_parent = go_container.
+    CREATE OBJECT go_alv
+      EXPORTING
+        i_parent = go_container.
+  ENDIF.
+ENDMODULE.
 ```
