Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -65,7 +65,11 @@
 </br>
 </br>
 
-### < ABAP 객체 생성 기본 문법 >
+---
+
+</br>
+
+## < ABAP 객체 생성 기본 문법 >
 **1) 참조 변수 선언**
 - 객체를 담는 변수가 아니라 객체를 가리키는 참조 변수
 - 실제 객체는 아직 없음
@@ -105,4 +109,63 @@ MODULE init_alv OUTPUT.
         i_parent = go_container.
   ENDIF.
 ENDMODULE.
+```
+</br>
+
+**3) ALV 컨트롤 인스턴스 해제**
+- 화면 종료 시 PAI에서 ALV/Container → free 호출로 자원 해제
+- PAI(EXIT, CANCEL) 에서 수행
+```abap
+FORM free_control_resources.
+  CALL METHOD <alv_ref>->free.
+  CALL METHOD <container_ref>->free.
+  FREE: <alv_ref>, <container_ref>.
+ENDFORM.
+```
+```abap
+MODULE exit_commands_0100 INPUT.    " PAI
+  CASE ok_code.
+    WHEN 'EXIT' OR 'CANCEL'.
+      PERFORM free_control_resources.
+      LEAVE PROGRAM.
+  ENDCASE.
+ENDMODULE.
+
+FORM free_control_resources.        " F01
+  CALL METHOD go_alv->free.
+  CALL METHOD go_container->free.
+  FREE: go_alv, go_container.
+ENDFORM.
+```
+</br>
+
+**4) ALV Grid 데이터 표시**
+- ALV Grid에 처음으로 데이터를 출력하는 메서드
+- 내부 테이블( `it_outtab` )의 데이터를 기준으로 화면 구성
+- `i_structure_name` 은 컬럼 구조 기준(DDIC 구조체)
+```abap
+CALL METHOD <alv_ref>->set_table_for_first_display
+  EXPORTING
+    i_structure_name = '<DDIC_STRUCTURE>'
+  CHANGING
+    it_outtab        = <internal_table>
+  EXCEPTIONS
+    invalid_parameter_combination = 1
+    program_error                 = 2
+    too_many_lines                = 3
+    others                        = 4.
+```
+```abap
+DATA: gt_flight TYPE STANDARD TABLE OF sflight.
+
+CALL METHOD go_alv->set_table_for_first_display
+  EXPORTING
+    i_structure_name = 'SFLIGHT'
+  CHANGING
+    it_outtab        = gt_flight
+  EXCEPTIONS
+    invalid_parameter_combination = 1
+    program_error                 = 2
+    too_many_lines                = 3
+    others                        = 4.
 ```
