Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -169,3 +169,11 @@ CALL METHOD go_alv->set_table_for_first_display
     too_many_lines                = 3
     others                        = 4.
 ```
+</br>
+</br>
+
+---
+
+</br>
+
+## < ABAP 객체 생성 예제 >
