Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -177,3 +177,116 @@ CALL METHOD go_alv->set_table_for_first_display
 </br>
 
 ## < ABAP 객체 생성 예제 >
+**1) 참조 변수 선언**
+```abap
+REPORT ZPROGB03_0028.
+
+DATA: OK_CODE TYPE sy-ucomm.
+DATA: gs_flight TYPE sflight,
+      gt_flight TYPE TABLE OF sflight.
+
+" Container 참조변수 생성 (아직 객체 생성되기 전)
+DATA: go_cont TYPE REF TO CL_GUI_CUSTOM_CONTAINER,
+      " ALV 참조변수 생성 (아직 객체 생성되기 전)
+      go_alv TYPE REF TO CL_GUI_ALV_GRID.
+
+PARAMETERS: pa_car TYPE s_carr_id.
+SELECT-OPTIONS: so_con FOR gs_flight-connid,
+                so_fdt FOR gs_flight-fldate.
+
+INCLUDE ZPROGB03_0028_O01.  " PBO
+INCLUDE ZPROGB03_0028_I01.  " PAI
+INCLUDE ZPROGB03_0028_F01.
+
+START-OF-SELECTION.
+
+PERFORM get_data.
+CALL SCREEN 100.
+```
+</br>
+
+**2) `Screen` 에 모듈 생성**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE INIT_ALV.
+ MODULE CLEAR_OK_CODE.
+
+PROCESS AFTER INPUT.
+ MODULE EXIT AT EXIT-COMMAND.
+ MODULE USER_COMMAND_0100.
+```
+</br>
+
+**3) `PBO` 에 객체 생성**
+```abap
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100'.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module CLEAR_OK_CODE OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE clear_ok_code OUTPUT.
+  CLEAR OK_CODE.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module INIT_ALV OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE init_alv OUTPUT.
+  " 1. SCREEN에 Custom Area 추가
+  " 2. Container Control 생성 (AREA와 연결)
+  IF go_cont IS INITIAL. " 최초 1번만 실행
+    CREATE OBJECT go_cont
+      EXPORTING
+        container_name              = 'AREA'
+      EXCEPTIONS
+        cntl_error                  = 1
+        cntl_system_error           = 2
+        create_error                = 3
+        lifetime_error              = 4
+        lifetime_dynpro_dynpro_link = 5
+        others                      = 6.
+
+    IF sy-subrc <> 0.
+      MESSAGE  'Container 생성 중 오류 발생' TYPE 'E'.
+    ENDIF.
+
+    " 3. ALV Grid 생성
+    CREATE OBJECT go_alv
+      EXPORTING
+        i_parent          = go_cont " Container와 연결
+      EXCEPTIONS
+        error_cntl_create = 1
+        error_cntl_init   = 2
+        error_cntl_link   = 3
+        error_dp_create   = 4
+        others            = 5.
+
+    IF sy-subrc <> 0.
+      MESSAGE 'ALV Grid 생성 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+
+  " 4. ALV Grid 안에 Data Display
+  CALL METHOD go_alv->set_table_for_first_display
+    EXPORTING
+      i_structure_name              = 'SFLIGHT'
+    CHANGING
+      it_outtab                     = gt_flight
+    EXCEPTIONS
+      invalid_parameter_combination = 1
+      program_error                 = 2
+      too_many_lines                = 3
+      others                        = 4.
+
+  IF sy-subrc <> 0.
+*   Implement suitable error handling here
+  ENDIF.
+
+ENDMODULE.
+```
