Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -219,6 +219,12 @@ PROCESS AFTER INPUT.
 </br>
 
 **3) `PBO` 에 객체 생성**
+- `Custom Container` 객체를 생성
+  
+<img width="377" height="363" alt="image" src="https://github.com/user-attachments/assets/6d99dc1d-c5bd-4140-b21a-e41130485067" />
+</br>
+</br>
+
 ```abap
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
