Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -219,30 +219,38 @@ PROCESS AFTER INPUT.
 </br>
 
 **3) `PBO` 에 객체 생성**
-- `Custom Container` 객체를 생성
+- `Custom Container` 객체 생성
   
 <img width="377" height="363" alt="image" src="https://github.com/user-attachments/assets/6d99dc1d-c5bd-4140-b21a-e41130485067" />
 </br>
 </br>
 
+- `ALV Grid` 객체 생성
+
+<img width="375" height="359" alt="image" src="https://github.com/user-attachments/assets/90735023-c617-449e-98ad-6b3eed0e0f61" />
+</br>
+</br>
+
+- ALV Grid 메서드 호출
+<img width="384" height="362" alt="image" src="https://github.com/user-attachments/assets/e2594dd2-511b-4721-b9c6-b9e5ec7d13ab" />
+</br>
+</br>
+
+- `PBO` 에 객체 생성
 ```abap
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100'.
 ENDMODULE.
+
 *&---------------------------------------------------------------------*
-*& Module CLEAR_OK_CODE OUTPUT
-*&---------------------------------------------------------------------*
-*&
-*&---------------------------------------------------------------------*
+
 MODULE clear_ok_code OUTPUT.
   CLEAR OK_CODE.
 ENDMODULE.
+
 *&---------------------------------------------------------------------*
-*& Module INIT_ALV OUTPUT
-*&---------------------------------------------------------------------*
-*&
-*&---------------------------------------------------------------------*
+
 MODULE init_alv OUTPUT.
   " 1. SCREEN에 Custom Area 추가
   " 2. Container Control 생성 (AREA와 연결)
@@ -296,3 +304,6 @@ MODULE init_alv OUTPUT.
 
 ENDMODULE.
 ```
+</br>
+
+**3) ALV 컨트롤 인스턴스 해제**
