Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -306,4 +306,52 @@ ENDMODULE.
 ```
 </br>
 
-**3) ALV 컨트롤 인스턴스 해제**
+**4) `PAI` 에 ALV 컨트롤 인스턴스 해제**
+```abap
+FORM get_data.
+  SELECT *
+    FROM sflight
+    INTO TABLE gt_flight
+    WHERE carrid = pa_car
+      AND connid IN so_con
+      AND fldate IN so_fdt.
+  IF sy-subrc = 0.
+
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM free_alv.
+  IF GO_ALV IS NOT INITIAL.
+    GO_ALV->FREE( ).
+  ENDIF.
+  IF GO_CONT IS NOT INITIAL.
+    GO_CONT->FREE( ).
+  ENDIF.
+  FREE: GO_ALV, GO_CONT.
+ENDFORM.
+```
+```abap
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'EXIT'.
+      PERFORM FREE_ALV.
+      LEAVE PROGRAM.
+    WHEN 'CANCEL'.
+      PERFORM FREE_ALV.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
