Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -218,7 +218,58 @@ PROCESS AFTER INPUT.
 ```
 </br>
 
-**3) `PBO` 에 객체 생성**
+**3) `PAI` 에 ALV 컨트롤 인스턴스 해제**
+```abap
+FORM get_data.
+  SELECT *
+    FROM sflight
+    INTO TABLE gt_flight
+    WHERE carrid = pa_car
+      AND connid IN so_con
+      AND fldate IN so_fdt.
+  IF sy-subrc = 0.
+
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM free_alv.
+  IF GO_ALV IS NOT INITIAL.
+    GO_ALV->FREE( ).
+  ENDIF.
+  IF GO_CONT IS NOT INITIAL.
+    GO_CONT->FREE( ).
+  ENDIF.
+  FREE: GO_ALV, GO_CONT.
+ENDFORM.
+```
+```abap
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'EXIT'.
+      PERFORM FREE_ALV.
+      LEAVE PROGRAM.
+    WHEN 'CANCEL'.
+      PERFORM FREE_ALV.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**4) `PBO` 에 객체 생성 및 ALV Grid 데이터 표시****
 - `Custom Container` 객체 생성
   
 <img width="377" height="363" alt="image" src="https://github.com/user-attachments/assets/6d99dc1d-c5bd-4140-b21a-e41130485067" />
@@ -236,7 +287,7 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 
-- `PBO` 에 객체 생성
+- `PBO` 에 객체 생성 및 ALV Grid 데이터 표시
 ```abap
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
@@ -302,56 +353,5 @@ MODULE init_alv OUTPUT.
 *   Implement suitable error handling here
   ENDIF.
 
-ENDMODULE.
-```
-</br>
-
-**4) `PAI` 에 ALV 컨트롤 인스턴스 해제**
-```abap
-FORM get_data.
-  SELECT *
-    FROM sflight
-    INTO TABLE gt_flight
-    WHERE carrid = pa_car
-      AND connid IN so_con
-      AND fldate IN so_fdt.
-  IF sy-subrc = 0.
-
-  ENDIF.
-ENDFORM.
-
-*&---------------------------------------------------------------------*
-
-FORM free_alv.
-  IF GO_ALV IS NOT INITIAL.
-    GO_ALV->FREE( ).
-  ENDIF.
-  IF GO_CONT IS NOT INITIAL.
-    GO_CONT->FREE( ).
-  ENDIF.
-  FREE: GO_ALV, GO_CONT.
-ENDFORM.
-```
-```abap
-MODULE exit INPUT.
-  CASE OK_CODE.
-    WHEN 'EXIT'.
-      PERFORM FREE_ALV.
-      LEAVE PROGRAM.
-    WHEN 'CANCEL'.
-      PERFORM FREE_ALV.
-      LEAVE TO SCREEN 0.
-    WHEN OTHERS.
-  ENDCASE.
-ENDMODULE.
-
-*&---------------------------------------------------------------------*
-
-MODULE user_command_0100 INPUT.
-  CASE OK_CODE.
-    WHEN 'BACK'.
-      LEAVE TO SCREEN 0.
-    WHEN OTHERS.
-  ENDCASE.
 ENDMODULE.
 ```
