Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -269,7 +269,7 @@ ENDMODULE.
 ```
 </br>
 
-**4) `PBO` 에 객체 생성 및 ALV Grid 데이터 표시****
+**4) `PBO` 에 객체 생성 및 ALV Grid 데이터 표시**
 - `Custom Container` 객체 생성
   
 <img width="377" height="363" alt="image" src="https://github.com/user-attachments/assets/6d99dc1d-c5bd-4140-b21a-e41130485067" />
@@ -355,3 +355,11 @@ MODULE init_alv OUTPUT.
 
 ENDMODULE.
 ```
+</br>
+
+**5) 결과 확인**
+
+<img width="475" height="127" alt="image" src="https://github.com/user-attachments/assets/a7190486-1fe1-40c7-be7f-222564219cbc" />
+</br>
+</br>
+<img width="574" height="174" alt="image" src="https://github.com/user-attachments/assets/9b72474e-7ab8-47fd-a1f1-5c8b5a0c0e48" />
