Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -80,6 +80,7 @@ DATA: <ref_var> TYPE REF TO <class_name>.
 DATA: go_alv TYPE REF TO cl_gui_alv_grid.
 ```
 </br>
+</br>
 
 **2) 객체 생성**
 - `CREATE OBJECT` 로 실제 객체 생성 (생성자 자동 호출)
@@ -111,6 +112,7 @@ MODULE init_alv OUTPUT.
 ENDMODULE.
 ```
 </br>
+</br>
 
 **3) ALV 컨트롤 인스턴스 해제**
 - 화면 종료 시 PAI에서 ALV/Container → free 호출로 자원 해제
@@ -137,6 +139,7 @@ FORM free_control_resources.        " F01
   FREE: go_alv, go_container.
 ENDFORM.
 ```
+</br>
 </br>
 
 **4) ALV Grid 데이터 표시**
@@ -168,6 +171,27 @@ CALL METHOD go_alv->set_table_for_first_display
     program_error                 = 2
     too_many_lines                = 3
     others                        = 4.
+```
+</br>
+</br>
+
+**5) ALV 데이터 갱신**
+- ALV Grid를 다시 생성하지 않고 부 테이블 변경 내용을 화면에 반영
+```abap
+CALL METHOD <alv_ref>->refresh_table_display
+  EXPORTING
+    is_stable = <lvc_s_stbl>
+  EXCEPTIONS
+    finished = 1
+    others   = 2.
+```
+```abap
+CALL METHOD go_alv->refresh_table_display
+  EXPORTING
+    is_stable = VALUE lvc_s_stbl( row = 'X' col = 'X' )
+  EXCEPTIONS
+    finished = 1
+    others   = 2.
 ```
 </br>
 </br>
