--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -202,6 +202,8 @@ CALL METHOD go_alv->refresh_table_display
 
 ## < ABAP 객체 생성 예제 >
 **1) 참조 변수 선언**
+- `CL_GUI_CUSTOM_CONTAINER` : Screen의 Area와 연결되는 컨테이너
+- `CL_GUI_ALV_GRID` : Container 안에서 데이터를 표시하는 ALV Grid 객체
 ```abap
 REPORT ZPROGB03_0028.
 
@@ -318,6 +320,7 @@ ENDMODULE.
 </br>
 
 - `PBO` 에 객체 생성 및 ALV Grid 데이터 표시
+- `SET_TABLE_FOR_FIRST_DISPLAY` : 내부 테이블 데이터를 ALV Grid에 최초로 표시하는 메서드
 ```abap
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
