Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -64,12 +64,16 @@
 </br>
 </br>
 </br>
+</br>
 
 ---
 
 </br>
 
 ## < ABAP 객체 생성 기본 문법 >
+- **Area는 Container로, Container는 ALV Grid로 연결됨**
+</br>
+
 **1) 참조 변수 선언**
 - 객체를 담는 변수가 아니라 객체를 가리키는 참조 변수
 - 실제 객체는 아직 없음
@@ -193,6 +197,7 @@ CALL METHOD go_alv->refresh_table_display
     finished = 1
     others   = 2.
 ```
+</br>
 </br>
 </br>
 
@@ -321,6 +326,7 @@ ENDMODULE.
 
 - `PBO` 에 객체 생성 및 ALV Grid 데이터 표시
 - `SET_TABLE_FOR_FIRST_DISPLAY` : 내부 테이블 데이터를 ALV Grid에 최초로 표시하는 메서드
+- SET_TABLE* 하고 f4 누르면 자동완성
 ```abap
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
