Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -374,22 +374,33 @@ MODULE init_alv OUTPUT.
     IF sy-subrc <> 0.
       MESSAGE 'ALV Grid 생성 중 오류 발생' TYPE 'E'.
     ENDIF.
-  ENDIF.
 
-  " 4. ALV Grid 안에 Data Display
-  CALL METHOD go_alv->set_table_for_first_display
-    EXPORTING
-      i_structure_name              = 'SFLIGHT'
-    CHANGING
-      it_outtab                     = gt_flight
-    EXCEPTIONS
-      invalid_parameter_combination = 1
-      program_error                 = 2
-      too_many_lines                = 3
-      others                        = 4.
+    " 4. ALV Grid 안에 Data Display
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SFLIGHT'
+      CHANGING
+        it_outtab                     = gt_flight
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
 
-  IF sy-subrc <> 0.
-*   Implement suitable error handling here
+    IF sy-subrc <> 0.
+*     Implement suitable error handling here
+    ENDIF.
+  ELSE.
+    " 최초에 1번 생성괸 후, 두번째부터는 ELSE구문을 실행한다
+    CALL METHOD go_alv->refresh_table_display
+      EXCEPTIONS
+        finished       = 1
+        others         = 2.
+
+    IF sy-subrc <> 0.
+*     Implement suitable error handling here
+    ENDIF.
+
   ENDIF.
 
 ENDMODULE.
