--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -128,6 +128,8 @@ FORM free_control_resources.
   FREE: <alv_ref>, <container_ref>.
 ENDFORM.
 ```
+- `->FREE()` : 객체가 사용하는 GUI 컨트롤 자원 해제
+- `FREE ref` : 참조 변수만 해제(값 INITIAL로 초기화)
 ```abap
 MODULE exit_commands_0100 INPUT.    " PAI
   CASE ok_code.
