--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -72,6 +72,10 @@
 
 ## < ABAP 객체 생성 기본 문법 >
 - **Area는 Container로, Container는 ALV Grid로 연결됨**
+- **클래스** : 객체의 설계도
+- **인스턴스(객체)** : 클래스로 생성된 실제 실체
+- **참조 변수** : 객체를 가리키는 포인터 변수
+</br>
 </br>
 
 **1) 참조 변수 선언**
