Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -335,6 +335,7 @@ ENDMODULE.
 - `PBO` 에 객체 생성 및 ALV Grid 데이터 표시
 - `SET_TABLE_FOR_FIRST_DISPLAY` : 내부 테이블 데이터를 ALV Grid에 최초로 표시하는 메서드
 - SET_TABLE* 하고 f4 누르면 자동완성
+- `REFRESH_TABLE_DISPLAY` : 내부 테이블 변경 내용을 ALV Grid에 다시 표시(갱신)하는 메서드
 ```abap
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
