Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -155,7 +155,7 @@ ENDFORM.
 **4) ALV Grid 데이터 표시**
 - ALV Grid에 처음으로 데이터를 출력하는 메서드
 - 내부 테이블( `it_outtab` )의 데이터를 기준으로 화면 구성
-- `i_structure_name` 은 컬럼 구조 기준(DDIC 구조체)
+- `i_structure_name` 에 지정한 DDIC 구조 기준으로 ALV 컬럼 구조가 자동 출력됨
 ```abap
 CALL METHOD <alv_ref>->set_table_for_first_display
   EXPORTING
