Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -433,4 +433,78 @@ ENDMODULE.
 
 </br>
 
-## < ALV 화면 구성 >
+## < 실습 코드 >
+</br>
+
+### 실습 1
+- ALV 실습
+</br>
+
+**1) Program 에 모듈 생성**
+```abap
+REPORT ZPROGB03_0029.
+
+INCLUDE ZPROGB03_0029_TOP.
+INCLUDE ZPROGB03_0029_O01.
+INCLUDE ZPROGB03_0029_I01.
+INCLUDE ZPROGB03_0029_F01.
+```
+</br>
+</br>
+
+**2) `TOP` 모듈 생성**
+```abap
+DATA: gt_data TYPE TABLE OF sbook,
+      gs_data LIKE LINE OF gt_data.
+
+DATA: ok_code TYPE sy-ucomm,
+      go_cont TYPE REF TO cl_gui_custom_container,
+      go_alv  TYPE REF TO cl_gui_alv_grid.
+
+SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME.
+  SELECT-OPTIONS: so_car FOR gs_data-carrid,
+                  so_con FOR gs_data-connid,
+                  so_fdt FOR gs_data-fldate.
+SELECTION-SCREEN END OF BLOCK blk1.
+
+INITIALIZATION.
+  PERFORM set_options.
+
+START-OF-SELECTION.
+  PERFORM GET_DATA.
+  CALL SCREEN 100.
+```
+</br>
+</br>
+
+**3) `F01` 모듈 생성**
+```abap
+FORM set_options.
+  so_fdt-sign = 'I'.
+  so_fdt-option = 'BT'.
+  so_fdt-low = sy-datum(4) && '0101'. " 매년 첫째날
+  so_fdt-high = sy-datum(4) && '1231'. " 매년 마지막날
+  APPEND so_fdt.
+
+  so_car-sign = 'I'.
+  so_car-option = 'GT'.
+  so_car-low = 'AZ'.
+  APPEND so_car.
+
+  CLEAR so_car.
+  so_car-sign = 'E'.
+  so_car-option = 'EQ'.
+  so_car-low = 'LH'.
+  APPEND so_car.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM get_data.
+  SELECT * FROM SBOOK
+    INTO TABLE gt_data
+    WHERE carrid IN so_car
+      AND connid IN so_con
+      AND fldate IN so_fdt.
+ENDFORM.
+```
