Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -509,3 +509,110 @@ FORM get_data.
       AND fldate IN so_fdt.
 ENDFORM.
 ```
+</br>
+</br>
+
+**4) `PBO` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0029_O01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100' WITH sy-uname sy-datum sy-uzeit.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module INIT_ALV OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE init_alv OUTPUT.
+  " 1. 100번 스크린 Layout에 Area 추가
+  " 2. 만약 Container 가 만들어지기 전이라면, 객체 생성함
+  "    Custom Container 생성
+  IF go_cont IS INITIAL.
+    CREATE OBJECT go_cont
+      EXPORTING
+        container_name              = 'AREA'
+      EXCEPTIONS
+        cntl_error                  = 1
+        cntl_system_error           = 2
+        create_error                = 3
+        lifetime_error              = 4
+        lifetime_dynpro_dynpro_link = 5
+        others                      = 6.
+    IF sy-subrc <> 0.
+*     MESSAGE ID SY-MSGID TYPE SY-MSGTY NUMBER SY-MSGNO
+*                WITH SY-MSGV1 SY-MSGV2 SY-MSGV3 SY-MSGV4.
+    ENDIF.
+
+    " 3. ALV Grid 객체 생성해서 Container와 연결
+    CREATE OBJECT go_alv
+      EXPORTING
+        i_parent          = go_cont
+      EXCEPTIONS
+        error_cntl_create = 1
+        error_cntl_init   = 2
+        error_cntl_link   = 3
+        error_dp_create   = 4
+        others            = 5.
+    IF sy-subrc <> 0.
+*     MESSAGE ID SY-MSGID TYPE SY-MSGTY NUMBER SY-MSGNO
+*                WITH SY-MSGV1 SY-MSGV2 SY-MSGV3 SY-MSGV4.
+    ENDIF.
+
+    " 4. ALV Grid 안에 Data display
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SBOOK'
+      CHANGING
+        it_outtab                     = gt_data
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4
+            .
+    IF sy-subrc <> 0.
+*     Implement suitable error handling here
+    ENDIF.
+
+  ENDIF.
+ENDMODULE.
+```
+</br>
+</br>
+
+**5) `PAI` 모듈 생성**
+```abap
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+</br>
+
+**6) 결과 확인**
+
+<img width="488" height="141" alt="image" src="https://github.com/user-attachments/assets/0593593a-ab76-4ee7-a844-32473cfcbab4" />
