Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -616,3 +616,7 @@ ENDMODULE.
 **6) 결과 확인**
 
 <img width="488" height="141" alt="image" src="https://github.com/user-attachments/assets/0593593a-ab76-4ee7-a844-32473cfcbab4" />
+</br>
+</br>
+
+<img width="515" height="238" alt="image" src="https://github.com/user-attachments/assets/3e58a92f-1c2d-4be3-af54-f6a5e9ea0fb8" />
