Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -626,3 +626,192 @@ ENDMODULE.
 </br>
 
 ### 실습 2
+- 문제
+<img width="356" height="208" alt="image" src="https://github.com/user-attachments/assets/f0ef060a-6af1-4039-baf9-1cb3d57ad293" />
+</br>
+</br>
+</br>
+
+**1) Program 에 모듈 생성**
+```abap
+REPORT ZPROGB03_0029.
+
+INCLUDE ZPROGB03_0029_TOP.
+INCLUDE ZPROGB03_0029_O01.
+INCLUDE ZPROGB03_0029_I01.
+INCLUDE ZPROGB03_0029_F01.
+```
+</br>
+</br>
+
+**2) `TOP` 모듈 생성**
+```abap
+DATA: gt_data TYPE TABLE OF sbook,
+      gs_data LIKE LINE OF gt_data.
+
+DATA: ok_code TYPE sy-ucomm,
+      go_cont TYPE REF TO cl_gui_custom_container,
+      go_alv  TYPE REF TO cl_gui_alv_grid.
+
+SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME.
+  SELECT-OPTIONS: so_car FOR gs_data-carrid,
+                  so_con FOR gs_data-connid,
+                  so_fdt FOR gs_data-fldate.
+SELECTION-SCREEN END OF BLOCK blk1.
+
+INITIALIZATION.
+  PERFORM set_options.
+
+START-OF-SELECTION.
+  PERFORM GET_DATA.
+  CALL SCREEN 100.
+```
+</br>
+</br>
+
+**3) `F01` 모듈 생성**
+```abap
+FORM set_options.
+  so_fdt-sign = 'I'.
+  so_fdt-option = 'BT'.
+  so_fdt-low = sy-datum(4) && '0101'. " 매년 첫째날
+  so_fdt-high = sy-datum(4) && '1231'. " 매년 마지막날
+  APPEND so_fdt.
+
+  so_car-sign = 'I'.
+  so_car-option = 'GT'.
+  so_car-low = 'AZ'.
+  APPEND so_car.
+
+  CLEAR so_car.
+  so_car-sign = 'E'.
+  so_car-option = 'EQ'.
+  so_car-low = 'LH'.
+  APPEND so_car.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM get_data.
+  SELECT * FROM SBOOK
+    INTO TABLE gt_data
+    WHERE carrid IN so_car
+      AND connid IN so_con
+      AND fldate IN so_fdt.
+ENDFORM.
+```
+</br>
+</br>
+
+**4) `PBO` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0029_O01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100' WITH sy-uname sy-datum sy-uzeit.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module INIT_ALV OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE init_alv OUTPUT.
+  " 1. 100번 스크린 Layout에 Area 추가
+  " 2. 만약 Container 가 만들어지기 전이라면, 객체 생성함
+  "    Custom Container 생성
+  IF go_cont IS INITIAL.
+    CREATE OBJECT go_cont
+      EXPORTING
+        container_name              = 'AREA'
+      EXCEPTIONS
+        cntl_error                  = 1
+        cntl_system_error           = 2
+        create_error                = 3
+        lifetime_error              = 4
+        lifetime_dynpro_dynpro_link = 5
+        others                      = 6.
+    IF sy-subrc <> 0.
+*     MESSAGE ID SY-MSGID TYPE SY-MSGTY NUMBER SY-MSGNO
+*                WITH SY-MSGV1 SY-MSGV2 SY-MSGV3 SY-MSGV4.
+    ENDIF.
+
+    " 3. ALV Grid 객체 생성해서 Container와 연결
+    CREATE OBJECT go_alv
+      EXPORTING
+        i_parent          = go_cont
+      EXCEPTIONS
+        error_cntl_create = 1
+        error_cntl_init   = 2
+        error_cntl_link   = 3
+        error_dp_create   = 4
+        others            = 5.
+    IF sy-subrc <> 0.
+*     MESSAGE ID SY-MSGID TYPE SY-MSGTY NUMBER SY-MSGNO
+*                WITH SY-MSGV1 SY-MSGV2 SY-MSGV3 SY-MSGV4.
+    ENDIF.
+
+    " 4. ALV Grid 안에 Data display
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SBOOK'
+      CHANGING
+        it_outtab                     = gt_data
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4
+            .
+    IF sy-subrc <> 0.
+*     Implement suitable error handling here
+    ENDIF.
+
+  ENDIF.
+ENDMODULE.
+```
+</br>
+</br>
+
+**5) `PAI` 모듈 생성**
+```abap
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+</br>
+
+**6) 결과 확인**
+
+<img width="488" height="141" alt="image" src="https://github.com/user-attachments/assets/0593593a-ab76-4ee7-a844-32473cfcbab4" />
+</br>
+
+<img width="515" height="238" alt="image" src="https://github.com/user-attachments/assets/3e58a92f-1c2d-4be3-af54-f6a5e9ea0fb8" />
+</br>
+</br>
+</br>
+</br>
+</br>
