--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -514,23 +514,13 @@ ENDFORM.
 
 **4) `PBO` 모듈 생성**
 ```abap
-*&---------------------------------------------------------------------*
-*& Include          ZPROGB03_0029_O01
-*&---------------------------------------------------------------------*
-*&---------------------------------------------------------------------*
-*& Module STATUS_0100 OUTPUT
-*&---------------------------------------------------------------------*
-*&
-*&---------------------------------------------------------------------*
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100' WITH sy-uname sy-datum sy-uzeit.
 ENDMODULE.
+
 *&---------------------------------------------------------------------*
-*& Module INIT_ALV OUTPUT
-*&---------------------------------------------------------------------*
-*&
-*&---------------------------------------------------------------------*
+
 MODULE init_alv OUTPUT.
   " 1. 100번 스크린 Layout에 Area 추가
   " 2. 만약 Container 가 만들어지기 전이라면, 객체 생성함
@@ -636,70 +626,73 @@ ENDMODULE.
 
 **1) Program 에 모듈 생성**
 ```abap
-REPORT ZPROGB03_0029.
+REPORT ZBC405_03_ALV.
 
-INCLUDE ZPROGB03_0029_TOP.
-INCLUDE ZPROGB03_0029_O01.
-INCLUDE ZPROGB03_0029_I01.
-INCLUDE ZPROGB03_0029_F01.
+INCLUDE ZBC405_03_ALV_TOP.
+INCLUDE ZBC405_03_ALV_O01.
+INCLUDE ZBC405_03_ALV_I01.
+INCLUDE ZBC405_03_ALV_F01.
+
+START-OF-SELECTION.
+
+*PERFORM get_data.
+PERFORM get_data2.
+CALL SCREEN 100.
 ```
 </br>
 </br>
 
 **2) `TOP` 모듈 생성**
 ```abap
-DATA: gt_data TYPE TABLE OF sbook,
-      gs_data LIKE LINE OF gt_data.
+DATA: OK_CODE TYPE sy-ucomm,
+      go_container TYPE REF TO cl_gui_custom_container,
+      go_alv_grid TYPE REF TO cl_gui_alv_grid.
 
-DATA: ok_code TYPE sy-ucomm,
-      go_cont TYPE REF TO cl_gui_custom_container,
-      go_alv  TYPE REF TO cl_gui_alv_grid.
+DATA: gs_flight TYPE sflight,
+      gt_flight TYPE TABLE OF sflight.
 
-SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME.
-  SELECT-OPTIONS: so_car FOR gs_data-carrid,
-                  so_con FOR gs_data-connid,
-                  so_fdt FOR gs_data-fldate.
-SELECTION-SCREEN END OF BLOCK blk1.
+DATA: gs_flight2 TYPE BC400_S_FLIGHT,
+      gt_flight2 TYPE TABLE OF BC400_S_FLIGHT.
 
-INITIALIZATION.
-  PERFORM set_options.
-
-START-OF-SELECTION.
-  PERFORM GET_DATA.
-  CALL SCREEN 100.
+SELECT-OPTIONS: so_car FOR gs_flight-carrid,
+                so_con FOR gs_flight-connid.
 ```
 </br>
 </br>
 
 **3) `F01` 모듈 생성**
 ```abap
-FORM set_options.
-  so_fdt-sign = 'I'.
-  so_fdt-option = 'BT'.
-  so_fdt-low = sy-datum(4) && '0101'. " 매년 첫째날
-  so_fdt-high = sy-datum(4) && '1231'. " 매년 마지막날
-  APPEND so_fdt.
-
-  so_car-sign = 'I'.
-  so_car-option = 'GT'.
-  so_car-low = 'AZ'.
-  APPEND so_car.
-
-  CLEAR so_car.
-  so_car-sign = 'E'.
-  so_car-option = 'EQ'.
-  so_car-low = 'LH'.
-  APPEND so_car.
+FORM get_data.
+  SELECT * FROM sflight
+    INTO TABLE gt_flight
+    WHERE carrid IN so_car
+      AND connid IN so_con.
 ENDFORM.
 
 *&---------------------------------------------------------------------*
 
-FORM get_data.
-  SELECT * FROM SBOOK
-    INTO TABLE gt_data
+FORM get_data2.
+  SELECT carrid connid fldate seatsmax seatsocc FROM sflight
+    INTO CORRESPONDING FIELDS OF TABLE gt_flight2
     WHERE carrid IN so_car
-      AND connid IN so_con
-      AND fldate IN so_fdt.
+      AND connid IN so_con.
+
+  LOOP AT gt_flight2 INTO gs_flight2.
+    gs_flight2-PERCENTAGE = ( gs_flight2-seatsocc / gs_flight2-seatsmax ) * 100.
+    MODIFY gt_flight2 FROM gs_flight2.
+  ENDLOOP.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM free_alv .
+  IF go_container IS INITIAL.
+    go_container->free( ).
+  ENDIF.
+  IF go_alv_grid IS INITIAL.
+    go_alv_grid->free( ).
+  ENDIF.
+  FREE: go_container, go_alv_grid.
 ENDFORM.
 ```
 </br>
@@ -707,31 +700,18 @@ ENDFORM.
 
 **4) `PBO` 모듈 생성**
 ```abap
-*&---------------------------------------------------------------------*
-*& Include          ZPROGB03_0029_O01
-*&---------------------------------------------------------------------*
-*&---------------------------------------------------------------------*
-*& Module STATUS_0100 OUTPUT
-*&---------------------------------------------------------------------*
-*&
-*&---------------------------------------------------------------------*
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
- SET TITLEBAR 'T100' WITH sy-uname sy-datum sy-uzeit.
+ SET TITLEBAR 'T100'.
 ENDMODULE.
+
 *&---------------------------------------------------------------------*
-*& Module INIT_ALV OUTPUT
-*&---------------------------------------------------------------------*
-*&
-*&---------------------------------------------------------------------*
-MODULE init_alv OUTPUT.
-  " 1. 100번 스크린 Layout에 Area 추가
-  " 2. 만약 Container 가 만들어지기 전이라면, 객체 생성함
-  "    Custom Container 생성
-  IF go_cont IS INITIAL.
-    CREATE OBJECT go_cont
+
+MODULE create_and_transfer OUTPUT.
+  IF go_container IS INITIAL.
+    CREATE OBJECT go_container
       EXPORTING
-        container_name              = 'AREA'
+        container_name              = 'MY_CONTROL_AREA'
       EXCEPTIONS
         cntl_error                  = 1
         cntl_system_error           = 2
@@ -740,14 +720,12 @@ MODULE init_alv OUTPUT.
         lifetime_dynpro_dynpro_link = 5
         others                      = 6.
     IF sy-subrc <> 0.
-*     MESSAGE ID SY-MSGID TYPE SY-MSGTY NUMBER SY-MSGNO
-*                WITH SY-MSGV1 SY-MSGV2 SY-MSGV3 SY-MSGV4.
+      MESSAGE A010(BC405_408).
     ENDIF.
 
-    " 3. ALV Grid 객체 생성해서 Container와 연결
-    CREATE OBJECT go_alv
+    CREATE OBJECT go_alv_grid
       EXPORTING
-        i_parent          = go_cont
+        i_parent          = go_container
       EXCEPTIONS
         error_cntl_create = 1
         error_cntl_init   = 2
@@ -755,27 +733,31 @@ MODULE init_alv OUTPUT.
         error_dp_create   = 4
         others            = 5.
     IF sy-subrc <> 0.
-*     MESSAGE ID SY-MSGID TYPE SY-MSGTY NUMBER SY-MSGNO
-*                WITH SY-MSGV1 SY-MSGV2 SY-MSGV3 SY-MSGV4.
+      MESSAGE A010(BC405_408).
     ENDIF.
 
-    " 4. ALV Grid 안에 Data display
-    CALL METHOD go_alv->set_table_for_first_display
+    CALL METHOD go_alv_grid->set_table_for_first_display
       EXPORTING
-        i_structure_name              = 'SBOOK'
+        i_structure_name              = 'BC400_S_FLIGHT'
       CHANGING
-        it_outtab                     = gt_data
+        it_outtab                     = gt_flight2
       EXCEPTIONS
         invalid_parameter_combination = 1
         program_error                 = 2
         too_many_lines                = 3
-        others                        = 4
-            .
+        others                        = 4.
     IF sy-subrc <> 0.
-*     Implement suitable error handling here
+      MESSAGE A012(BC405_408).
     ENDIF.
 
+
   ENDIF.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE clear_ok_code OUTPUT.
+  CLEAR OK_CODE.
 ENDMODULE.
 ```
 </br>
@@ -783,11 +765,9 @@ ENDMODULE.
 
 **5) `PAI` 모듈 생성**
 ```abap
-MODULE exit INPUT.
+MODULE user_command_0100 INPUT.
   CASE OK_CODE.
-    WHEN 'EXIT'.
-      LEAVE PROGRAM.
-    WHEN 'CANCEL'.
+    WHEN 'BACK'.
       LEAVE TO SCREEN 0.
     WHEN OTHERS.
   ENDCASE.
@@ -795,9 +775,13 @@ ENDMODULE.
 
 *&---------------------------------------------------------------------*
 
-MODULE user_command_0100 INPUT.
+MODULE exit INPUT.
   CASE OK_CODE.
-    WHEN 'BACK'.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+      PERFORM free_alv.
+    WHEN 'CANCEL'.
+      PERFORM free_alv.
       LEAVE TO SCREEN 0.
     WHEN OTHERS.
   ENDCASE.
