Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -63,6 +63,12 @@
 </br>
 </br>
 </br>
+
+### < ALV 레이아웃 Variant 저장 옵션 (I_SAVE) >
+- **`A`** : Global / Local 레이아웃 모두 저장 가능
+- **`U`** : Local(사용자별) 레이아웃만 저장 가능]
+- **`X`** : Global(공용) 레이아웃만 저장 가능
+- **`space`** : 레이아웃 저장 불가
 </br>
 </br>
 
