--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -63,16 +63,6 @@
 </br>
 </br>
 </br>
-
-### < ALV 레이아웃 Variant 저장 옵션 (I_SAVE) >
-**1) I_SAVE (저장 범위)**
-- `A` : Global / Local 레이아웃 모두 저장 가능
-- `U` : Local(사용자별) 레이아웃만 저장 가능
-- `X` : Global(공용) 레이아웃만 저장 가능
-- `space` : 레이아웃 저장 불가
-**2) I_DEFAULT (기본 레이아웃)**
-- `space` : Default 레이아웃 저장 안 함
-- `X` : Default 레이아웃 저장 가능 (기본값으로 사용)
 </br>
 </br>
 
@@ -436,6 +426,23 @@ ENDMODULE.
 <img width="574" height="174" alt="image" src="https://github.com/user-attachments/assets/9b72474e-7ab8-47fd-a1f1-5c8b5a0c0e48" />
 </br>
 </br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < ALV 레이아웃 Variant 저장 옵션 (I_SAVE) >
+**1) I_SAVE (저장 범위)**
+- `A` : Global / Local 레이아웃 모두 저장 가능
+- `U` : Local(사용자별) 레이아웃만 저장 가능
+- `X` : Global(공용) 레이아웃만 저장 가능
+- `space` : 레이아웃 저장 불가
+  
+**2) I_DEFAULT (기본 레이아웃)**
+- `space` : Default 레이아웃 저장 안 함
+- `X` : Default 레이아웃 저장 가능 (기본값으로 사용)
 </br>
 </br>
 
