Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -446,6 +446,69 @@ ENDMODULE.
 </br>
 </br>
 
+### 1) ALV 레이아웃 Variant 저장
+```abap
+DATA: <ls_variant> TYPE disvariant,
+      <lv_save>    TYPE c LENGTH 1.
+
+<ls_variant>-report = sy-cprog.
+<lv_save> = '<A|U|X|space>'.
+
+CALL METHOD <alv_ref>->set_table_for_first_display
+  EXPORTING
+    is_variant = <ls_variant>
+    i_save     = <lv_save>
+    i_default  = '<X|space>'
+  CHANGING
+    it_outtab  = <itab>.
+```
+```abap
+DATA: gs_variant TYPE disvariant,
+      gv_save    TYPE c LENGTH 1.
+
+gs_variant-report = sy-cprog.
+gv_save = 'A'.   " Global / Local 모두 저장
+
+CALL METHOD go_alv_grid->set_table_for_first_display
+  EXPORTING
+    is_variant = gs_variant
+    i_save     = gv_save
+    i_default  = 'X'
+  CHANGING
+    it_outtab  = gt_bookings.
+```
+</br>
+
+### 2) Selection Screen에서 Variant 전달
+```abap
+DATA <ls_variant> TYPE disvariant.
+PARAMETERS <p_var> TYPE disvariant-variant.
+
+<ls_variant>-report  = sy-cprog.
+<ls_variant>-variant = <p_var>.
+
+CALL METHOD <alv_ref>->set_table_for_first_display
+  EXPORTING
+    is_variant = <ls_variant>
+  CHANGING
+    it_outtab  = <itab>.
+```
+```abap
+DATA gv_variant TYPE disvariant.
+PARAMETERS pa_lv TYPE disvariant-variant.
+
+gv_variant-report  = sy-cprog.
+gv_variant-variant = pa_lv.
+
+CALL METHOD go_alv_grid->set_table_for_first_display
+  EXPORTING
+    is_variant = gv_variant
+  CHANGING
+    it_outtab  = gt_bookings.
+```
+</br>
+</br>
+
 ---
 
 </br>
