Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -449,6 +449,7 @@ ENDMODULE.
 </br>
 
 ### 1) ALV 레이아웃 Variant 저장
+- `<ls_variant>-report = sy-cprog.` 는 필수
 ```abap
 DATA: <ls_variant> TYPE disvariant,
       <lv_save>    TYPE c LENGTH 1.
@@ -508,6 +509,12 @@ CALL METHOD go_alv_grid->set_table_for_first_display
   CHANGING
     it_outtab  = gt_bookings.
 ```
+</br>
+</br>
+
+
+### < ALV 레이아웃 Variant 저장 옵션 (I_SAVE) 예제 >
+
 </br>
 </br>
 
