--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -436,15 +436,59 @@ ENDMODULE.
 ## < ALV 레이아웃 Variant 저장 옵션 (I_SAVE) >
 </br>
 
-**1) I_SAVE (저장 범위)**
+**1) `I_SAVE` (저장 범위)**
+- 프로그램 실행 시 자동 적용 여부 지정
 - `A` : Global / Local 레이아웃 모두 저장 가능
 - `U` : Local(사용자별) 레이아웃만 저장 가능
 - `X` : Global(공용) 레이아웃만 저장 가능
 - `space` : 레이아웃 저장 불가
+```abap
+i_save = '<A|U|X|space>'.      " ' ' (공백 문자) 쓰지 않기. '' 는 가능.
+```
   
-**2) I_DEFAULT (기본 레이아웃)**
-- `space` : Default 레이아웃 저장 안 함
-- `X` : Default 레이아웃 저장 가능 (기본값으로 사용)
+**2) `I_DEFAULT` (기본 레이아웃)**
+- 프로그램 실행 시 자동 적용 여부 지정
+- `space` : 레이아웃은 저장되지만 자동 적용 안 됨
+- `X` : 해당 레이아웃을 기본(Default) 으로 저장 → 실행 시 자동 적용
+```abap
+i_default = '<X|space>'.
+```
+
+**3) `<ls_variant>-report`**
+- 레이아웃 Variant가 속한 프로그램명
+- Variant 저장/조회에 필수
+- 보통 항상 sy-cprog 사용
+```abap
+<ls_variant>-report = sy-cprog.
+```
+
+**4) `<ls_variant>-variant`**
+- 적용할 레이아웃(Variant) 이름
+- Selection Screen에서 입력받은 Variant를 ALV에 적용할 때 사용
+```abap
+<ls_variant>-variant = <p_var>.
+```
+
+**5) `<ls_variant>-handle`**
+- 같은 프로그램에서 여러 ALV Grid 구분용 식별자
+- ALV 1개면 생략 가능
+```abap
+<ls_variant>-handle = '1'.
+```
+
+**6) `<ls_variant>-username`**
+- 특정 사용자 전용 Variant 지정
+- 대부분 시스템이 자동 처리 → 직접 설정 거의 안 함
+```abap
+<ls_variant>-username = sy-uname.
+```
+
+**7) <ls_variant>-text**
+- 레이아웃 설명 텍스트
+- Variant 저장 화면에서 입력·표시되는 값
+```abap
+<ls_variant>-text = 'Flight ALV Layout'.
+```
 </br>
 </br>
 
