Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -566,6 +566,43 @@ CALL METHOD go_alv_grid->set_table_for_first_display
 </br>
 
 ## < ALV 레이아웃 Variant 저장 옵션 (I_SAVE) 예제 >
+</br>
+
+**1) `TOP` 모듈 수정**
+```abap
+DATA: gs_variant TYPE disvariant.
+
+INITIALIZATION.
+  PERFORM set_options.
+  gs_variant-report = sy-cprog.
+  gs_variant-username = sy-uname.
+  gs_variant-handle = 'MAIN'.
+  " handle : 하나의 화면에 여러개의 ALV가 있는 경우
+  "          각 ALV마다 구분자가 필요하므로 구분자 지정해줌
+```
+</br>
+
+**2) `PBO` 의 `init_alv` 모듈 수정**
+```abap
+" 4. ALV Grid 안에 Data display
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SBOOK'
+        is_variant                    = gs_variant
+        i_save                        = 'A' " A, X, U, ''
+        i_default                     = 'X'
+      CHANGING
+        it_outtab                     = gt_data
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+```
+</br>
+
+**3) `Variant` 지정**
+<img width="511" height="174" alt="image" src="https://github.com/user-attachments/assets/2066b032-4300-445e-b15d-6943b89a5324" />
 
 </br>
 </br>
