Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -602,7 +602,19 @@ INITIALIZATION.
 </br>
 
 **3) `Variant` 지정**
+- 레이아웃 수정 후 레이아웃 저장
+  
 <img width="511" height="174" alt="image" src="https://github.com/user-attachments/assets/2066b032-4300-445e-b15d-6943b89a5324" />
+</br>
+</br>
+
+<img width="435" height="351" alt="image" src="https://github.com/user-attachments/assets/fbab5ce1-d915-4938-a262-f83736fe20f4" />
+</br>
+</br>
+
+<img width="435" height="361" alt="image" src="https://github.com/user-attachments/assets/fd7a76e1-0a81-4205-b3d7-70edded26b4d" />
+</br>
+</br>
 
 </br>
 </br>
