--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -614,6 +614,8 @@ INITIALIZATION.
 <img width="435" height="351" alt="image" src="https://github.com/user-attachments/assets/fbab5ce1-d915-4938-a262-f83736fe20f4" />
 </br>
 
+- **`User-Specific`** ✔ → Local(개인) / ✖ → Global(공용)
+- **`Default`** ✔ → 실행 시 자동 적용 / ✖ → 수동 선택
 <img width="435" height="361" alt="image" src="https://github.com/user-attachments/assets/fd7a76e1-0a81-4205-b3d7-70edded26b4d" />
 </br>
 </br>
