Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -628,6 +628,8 @@ INITIALIZATION.
 
 </br>
 </br>
+</br>
+</br>
 
 ---
 
@@ -1002,3 +1004,44 @@ ENDMODULE.
 </br>
 </br>
 </br>
+
+### 실습 3
+- Variat 실습
+</br>
+
+**1) `TOP` 모듈 수정**
+```abap
+DATA: gs_variant TYPE disvariant.
+
+PARAMETERS: pa_va TYPE disvariant-variant.
+```
+</br>
+</br>
+
+**2) `PBO` 의 `create_and_transfer` 모듈 수정**
+```abap
+gs_variant-report = sy-cprog.
+gs_variant-variant = pa_va.
+
+CALL METHOD go_alv_grid->set_table_for_first_display
+  EXPORTING
+    i_structure_name              = 'sflight'
+    is_variant = gs_variant
+    i_save = 'A'
+  CHANGING
+    it_outtab                     = gt_flight
+  EXCEPTIONS
+    invalid_parameter_combination = 1
+    program_error                 = 2
+    too_many_lines                = 3
+    others                        = 4.
+IF sy-subrc <> 0.
+  MESSAGE A012(BC405_408).
+ENDIF.
+```
+</br>
+</br>
+
+**3) 결과 확인**
+
+<img width="492" height="282" alt="image" src="https://github.com/user-attachments/assets/5ae999f6-b27a-4a39-9a9c-f1a4094975ea" />
