Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -1,8 +1,8 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) Pushbutton**
-- **2) Selection Screen 필드 제어**
+- **1) ABAP 객체 생성 기본 문법**
+- **2) ALV 레이아웃 Variant 저장 옵션**
 
 </br>
 </br>
@@ -441,7 +441,7 @@ ENDMODULE.
 
 </br>
 
-## < ALV 레이아웃 Variant 저장 옵션 (I_SAVE) >
+## < ALV 레이아웃 Variant 저장 옵션 >
 </br>
 
 **1) `I_SAVE` (저장 범위)**
