Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -1,3 +1,14 @@
-## < ABAP 객체 생성 기본 문법 >
+## <  핵심 개념 >
+</br>
 
-### `refresh_table_display`
+- **1) ABAP 객체 생성 기본 문법**
+- **2) ALV 레이아웃 Variant 저장 옵션**
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < ABAP 객체 생성 기본 문법 >
