--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -55,6 +55,20 @@ CALL METHOD go_alv->refresh_table_display
 </br>
 
 ### 2) ALV 레이아웃 설정 (IS_LAYOUT)
+- ALV Grid의 화면 모양(제목, 줄무늬, 컬럼 폭 등)을 설정
+- 데이터 내용은 안 바뀌고 표시 방식만 제어
+- `SET_TABLE_FOR_FIRST_DISPLAY` 에서 최초 출력 시만 적용
+
+| Field Name     | Description |
+|---------------|-------------|
+| `grid_title`  | ALV 상단에 표시되는 제목 (최대 70자) |
+| `zebra`       | `'X'` 설정 시 행을 줄무늬(Zebra) 형태로 표시 |
+| `no_headers`  | `'X'` 설정 시 컬럼 헤더 숨김 |
+| `sel_mode`    | 행 / 셀 / 컬럼 선택 방식 제어 |
+| `cwidth_opt`  | `'X'` 설정 시 컬럼 폭 자동 최적화 |
+| `info_fname`  | **행 단위 색상 정보**를 담고 있는 내부 테이블 필드명 |
+| `ctab_fname`  | **셀 단위 색상 정보**를 담고 있는 내부 테이블 필드명 |
+
 </br>
 </br>
 ---
