Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -61,16 +61,19 @@ CALL METHOD go_alv->refresh_table_display
 
 | Field Name     | Description |
 |---------------|-------------|
-| `grid_title`  | ALV 상단에 표시되는 제목 (최대 70자) |
-| `zebra`       | `'X'` 설정 시 행을 줄무늬(Zebra) 형태로 표시 |
+| `grid_title`  | ALV 상단에 표시되는 제목 텍스트 (최대 70자) |
+| `zebra`       | `'X'` 설정 시 행을 교차 색상(Zebra 패턴)으로 표시 |
 | `no_headers`  | `'X'` 설정 시 컬럼 헤더 숨김 |
-| `sel_mode`    | 행 / 셀 / 컬럼 선택 방식 제어 |
+| `sel_mode`    | 행 / 셀 / 컬럼 선택 모드 설정 |
 | `cwidth_opt`  | `'X'` 설정 시 컬럼 폭 자동 최적화 |
-| `info_fname`  | **행 단위 색상 정보**를 담고 있는 내부 테이블 필드명 |
-| `ctab_fname`  | **셀 단위 색상 정보**를 담고 있는 내부 테이블 필드명 |
+| `no_toolbar`  | `'X'` 설정 시 ALV 툴바 숨김 |
+| `totals_bef`  | `'X'` 설정 시 합계 행을 데이터 맨 위에 표시 |
+| `info_fname`  | **행(Row) 색상 정보**를 담고 있는 내부 테이블 필드명 |
+| `ctab_fname`  | **셀(Cell) 색상 정보**를 담고 있는 내부 테이블 필드명 |
 
 </br>
 </br>
+
 ---
 
 </br>
