Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -71,6 +71,32 @@ CALL METHOD go_alv->refresh_table_display
 | `info_fname`  | **행(Row) 색상 정보**를 담고 있는 내부 테이블 필드명 |
 | `ctab_fname`  | **셀(Cell) 색상 정보**를 담고 있는 내부 테이블 필드명 |
 
+- `lvc_s_layo` : ALV 화면의 모양(레이아웃) 을 제어하는 구조체
+```abap
+DATA <ls_layout> TYPE lvc_s_layo.
+
+CALL METHOD <alv_ref>->set_table_for_first_display
+  EXPORTING
+    i_structure_name = '<DDIC>'
+    is_layout        = <ls_layout>
+  CHANGING
+    it_outtab        = <itab>.
+```
+```abap
+DATA gs_layout TYPE lvc_s_layo.
+
+gs_layout-grid_title = 'ALV Grid Title'.
+gs_layout-zebra      = 'X'.   " 행 줄무늬
+gs_layout-cwidth_opt = 'X'.   " 컬럼 너비 자동
+
+CALL METHOD go_alv->set_table_for_first_display
+  EXPORTING
+    i_structure_name = 'SBOOK'
+    is_layout        = gs_layout
+  CHANGING
+    it_outtab        = gt_bookings.
+```
+  
 </br>
 </br>
 
