--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -64,6 +64,8 @@ CALL METHOD go_alv->refresh_table_display
 - 데이터 내용은 안 바뀌고 표시 방식만 제어
 - `SET_TABLE_FOR_FIRST_DISPLAY` 에서 최초 출력 시만 적용
 
+**LVC_S_LAYO (ALV Layout Structure 주요 필드 정리)**
+
 | Field Name     | Description |
 |---------------|-------------|
 | `grid_title`  | ALV 상단에 표시되는 제목 텍스트 (최대 70자) |
